@@ -129,6 +129,8 @@ Template for new versions:
 - ``Units::create``, ``Units::makeown``: new APIs to use bay12-provided entry points for low-level operations
 - ``format_number``: format numbers according to the configured player formatting preference
 - ``Items::remove``: now cancels related jobs and marks the item as hidden and forbidden until it can be garbage collected
+- ``Job::addGeneralRef``: new easy API for creating general references and adding them to a Job
+- ``Job::addWorker``: new API function for assigning a job to unit
 
 ## Lua
 - ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
